--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack",
-    "start": "webpack-dev-server"
+    "server": "webpack-dev-server --open"
   },
   "author": "",
   "license": "ISC"
